# G14ControlPP

./: .gitignore  CMakeLists.txt  G14ControlPP.pro  README.md  copyAndRestart.bat  doWindeploy.bat
CpuProfile/: CpuProfile.pri  cpuprofile.cpp  cpuprofile.h
FanCurve/: FanCurve.pri  fancurve.cpp  fancurve.h
G14Acpi/: G14Acpi.pri  G14AcpiExample.pro  acpilistenerthread.cpp  acpilistenerthread.h  controlcodes.h  g14acpi.cpp  g14acpi.h  main.cpp
G14AcpiController/: G14AcpiController.pri  g14acpicontroller.cpp  g14acpicontroller.h
G14AppState/: AppState.pri  appstate.cpp  appstate.h
G14ArmouryCrate/: G14ArmouryCrate.pri  g14armourycrate.cpp  g14armourycrate.h
G14ControlService/: G14ControlService.pro  G14ControlService.pro.user.948dbd6  main.cpp  main_emu.cpp
G14ControlService/appState/: appstate.cpp  appstate.h
G14ControlService/controller/: servicecontroller.cpp  servicecontroller.h
G14ControlService/storage/: settingsstorage.cpp  settingsstorage.h
G14ControlServiceExample/: G14ControlServiceExample.pro  main.cpp
G14ControlUI/: G14ControlUI.pro  G14ControlUI.pro.user.948dbd6  main.cpp
G14ControlUI/controller/: maincontroller.cpp  maincontroller.h
G14ControlUI/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
G14ControlUI/ui/powerProfileTab/: powerprofiletab.cpp  powerprofiletab.h  powerprofiletab.ui
G14ControlUI/ui/powerProfileTab/arCrate/: armourycratewidget.cpp  armourycratewidget.h  armourycratewidget.ui
G14ControlUI/ui/powerProfileTab/cpu/: cpuwidget.cpp  cpuwidget.h  cpuwidget.ui
G14ControlUI/ui/powerProfileTab/fans/: fanswidget.cpp  fanswidget.h  fanswidget.ui
G14ControlUI/ui/powerProfileTab/fans/fanCurveWidget/: edge.cpp  fanCurveWidget.cpp  node.cpp  node.h
JsonHelper/: JsonHelper.pri  jsonhelper.cpp  jsonhelper.h
KbdController/: KbdController.pri  KbdControllerExample.pro  hidcontrolcodes.h  kbdcontroller.cpp  kbdcontroller.h  kbdlistenerthread.cpp  kbdlistenerthread.h  main.cpp
Logger/: Logger.pri  ilogger.h  loggersingleton.cpp  loggersingleton.h
PowerSource/: PowerSource.pri  powersource.cpp  powersource.h
Rpc/client/: RpcClient.pri  RpcClientExample.pro  main.cpp  rpcclient.cpp  rpcclient.h  tcpclient.cpp  tcpclient.h
Rpc/proto/: RpcProtocol.pri  rpcmessagetype.cpp  rpcmessagetype.h
Rpc/proto/request/: appstaterequest.cpp  appstaterequest.h  baserequest.h  cpustaterequest.cpp  cpustaterequest.h
Rpc/proto/response/: appstateresponse.cpp  appstateresponse.h  baseresponse.h  cpustateresponse.cpp  cpustateresponse.h  error.cpp  error.h
Rpc/server/: RpcServer.pri  RpcServerExample.pro  main.cpp  rpcserver.cpp  rpcserver.h  rpcservercontroller.cpp  rpcservercontroller.h  socketworker.cpp  socketworker.h
RpcApi/: RpcApi.pri  rpcapi.cpp  rpcapi.h
RpcApi/client/: RpcApiClient.pri  RpcApiClientExample.pro
RpcApi/server/: RpcApiServer.pri  RpcApiServerExample.pro  main.cpp
RyzenController/: CpuReaderExample.pro  RyzenController.pri  main.cpp  ryzencontroller.cpp  ryzencontroller.h  ryzencontroller_emu.cpp
TcpDaemon/: TcpDaemon.pri  TcpDaemonExample.pro  main.cpp  socketworker.cpp  socketworker.h  tcpdaemon.cpp  tcpdaemon.h
Win32Events/: Win32Events.pri  compileRes.bat  fixPath.bat  provider.h  registerEventProvider.reg  win32eventcontroller.cpp  win32eventcontroller.h
Win32Utils/: Win32Utils.pri  win32error.cpp  win32error.h
src/: adminDeterm.cpp  main.cpp
src/atkacpi/: ACPIListenerThread.cpp  ACPIListenerThread.h  AcpiControlSingleton.cpp  AcpiControlSingleton.h  AcpiListenerThread.cpp  AcpiListenerThread.h  ArmouryCratePlan.cpp  ArmouryCratePlan.h  FanControlSingleton.cpp  FanControlSingleton.h  FanCurve.cpp  FanCurve.h  FanDef.cpp  FanDef.h  FansProfile.cpp  FansProfile.h
src/audio/: AudioUtils.cpp  AudioUtils.h
src/controller/: servicecontroller.cpp  servicecontroller.h
src/controller/acpi/: acpicontroller.cpp  acpicontroller.h  acpilistenerthread.cpp  acpilistenerthread.h
src/controller/cpu/: RyzenAdjTypes.h  cpucontroller.cpp  cpucontroller.h
src/controller/keyboard/: kbdlistenerthread.cpp  kbdlistenerthread.h  keyboardcontroller.cpp  keyboardcontroller.h
src/controller/nativeEvent/: nativeeventcontroller.cpp  nativeeventcontroller.h
src/events/: AcpiListenerThread.cpp  AcpiListenerThread.h  GlobalEventDispatcher.cpp  GlobalEventDispatcher.h  KbdListenerThread.cpp  KbdListenerThread.h
src/kbd/: KbdControlSingleton.cpp  KbdControlSingleton.h  KbdListenerThread.cpp  KbdListenerThread.h
src/kbdlistener/: KbdListenerSingleton.cpp  KbdListenerSingleton.h  KbdListenerThread.cpp  KbdListenerThread.h  ListenerThread.cpp  ListenerThread.h
src/model/: ArmouryCratePlan.cpp  ArmouryCratePlan.h  CpuProfile.cpp  CpuProfile.h  FanCurve.cpp  FanCurve.h  FansProfile.cpp  FansProfile.h  FullPowerPlan.cpp  FullPowerPlan.h  HwProfile.cpp  HwProfile.h  PowerPlan.cpp  PowerPlan.h  PowerProfile.cpp  PowerProfile.h  collections.cpp
src/ryzenadj/: PowerProfile.cpp  PowerProfile.h  RyzenAdjSingleton.cpp  RyzenAdjSingleton.h  RyzenAdjTypes.cpp  RyzenAdjTypes.h
src/settings/: PowerPlan.cpp  PowerPlan.h  PowerPlanSet.cpp  PowerPlanSet.h  Settings.cpp  Settings.h
src/storage/: settingsstorage.cpp  settingsstorage.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/ui/base/: BaseTab.h
src/ui/batteryTab/: BatteryTab.cpp  BatteryTab.h  BatteryTab.ui
src/ui/cpuFansTab/: cpufanstab.cpp  cpufanstab.h  cpufanstab.ui
src/ui/cpuFansTab/fanCurveView/: FanCurveView.cpp  FanCurveView.h
src/ui/cpuTab/: CpuTab.cpp  CpuTab.h  CpuTab.ui
src/ui/fansTab/: FansTab.cpp  FansTab.h  FansTab.ui
src/ui/fansTab/fanCurveView/: Edge.cpp  Edge.h  FanCurveView.cpp  FanCurveView.h  Node.cpp
src/ui/hotkeys/: HotkeyAction.cpp  HotkeyAction.h  HotkeysProfile.cpp  HotkeysProfile.h  HotkeysTab.cpp  HotkeysTab.h  HotkeysTab.ui
src/ui/mainTab/: MainTab.cpp  MainTab.h  MainTab.ui
src/ui/notificationHelper/: NotificationHelper.cpp  NotificationHelper.h
src/ui/powerPlans/: PowerPlansTab.cpp  PowerPlansTab.h  PowerPlansTab.ui  PowerPlansTab.ui.autosave
